--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,11 @@
 		</dependency>
 		
 		
-		<!-- 
+		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
-		</dependency> -->
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency> 
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
